# TraceMap

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/skills/tracemap-agents/: SKILL.md
.cursor/skills/tracemap-dev/: SKILL.md
.cursor/skills/tracemap-ingest/: SKILL.md
.cursor/skills/tracemap-traceability/: SKILL.md
.cursor/skills/tracemap-ui/: SKILL.md
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CODE_FLOW.md  SETUP.md  WORKFLOW.md
scripts/: init_db.py  smoke_ingest.py  verify.py
src/tracemap/: __init__.py  config.py
src/tracemap/agents/: agents.py  compat.py  crew.py  process.py  schemas.py  tasks.py  tools.py
src/tracemap/db/: models.py  repository.py
src/tracemap/ingestion/: base.py  confluence_extractor.py  doors_extractor.py  pdf_extractor.py  service.py
src/tracemap/integrations/: jira_client.py
src/tracemap/scripts/: init_db.py  run_ui.py
src/tracemap/skills/: __init__.py  audit_skills.py  ingestion_skills.py  requirement_skills.py  testcase_skills.py
src/tracemap/ui/: app.py  state.py  theme.py
src/tracemap/ui/components/: defect_badge.py  header.py  ingest_panel.py  matrix_table.py  metric_cards.py  pipeline_status.py
src/tracemap/ui/pages/: __init__.py  dashboard.py  execute.py  ingest.py  matrix.py  settings.py
src/tracemap/vector/: chroma_store.py
tests/: test_crew_schemas.py  test_ingestion_service.py  test_pdf_extractor.py  test_repository.py
