[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemap"
version = "0.1.0"
description = "End-to-end requirement traceability platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80",
    "pdfplumber",
    "beautifulsoup4",
    "atlassian-python-api",
    "sqlalchemy>=2.0",
    "chromadb",
    "sentence-transformers",
    "pydantic-settings",
    "streamlit",
    "plotly",
    "jira",
    "python-dotenv",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
tracemap-init-db = "tracemap.scripts.init_db:main"
tracemap-ui = "tracemap.scripts.run_ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
